--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(calculate_interval_bs)
 export(calculate_pvals)
 export(cusum)
 export(cusum_phi_vec)
+export(find_cps)
 export(generate_random_intervals)
 export(narrowest_over_threshold)
 export(not_psi_change_in_mean)
