--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(binary_segmentation_psi)
 export(calculate_S_all_methods)
 export(calculate_interval_bs)
 export(calculate_pvals)
+export(changepoints_psi)
 export(cusum)
 export(cusum_phi_vec)
 export(find_cps)
