--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export(binary_segmentation)
 export(binary_segmentation_psi)
 export(calculate_S_all_methods)
+export(calculate_interval)
 export(calculate_interval_bs)
+export(calculate_interval_not)
+export(calculate_interval_wbs)
 export(calculate_pvals)
 export(changepoints_psi)
 export(cusum)
