--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(cusum)
 export(cusum_phi_vec)
 export(find_cps)
 export(generate_random_intervals)
+export(l0_segmentation_psi)
 export(narrowest_over_threshold)
 export(wild_binary_segmentation)
 export(y_phi)
