--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,10 @@ export(calculate_interval_wbs)
 export(calculate_pvals)
 export(cusum)
 export(cusum_phi_vec)
-export(find_cps)
+export(find_changepoints)
 export(generate_random_intervals)
 export(l0_segmentation_psi)
+export(mad)
 export(narrowest_over_threshold)
 export(wild_binary_segmentation)
 export(y_phi)
